# SNAIL

./: Doc.txt  README.md
Risk-Aware Planner/: README.md
Risk-Aware Planner/dwa_local_planner/: CMakeLists.txt
Risk-Aware Planner/dwa_local_planner/cfg/: DWAPlanner.cfg
Risk-Aware Planner/dwa_local_planner/include/dwa_local_planner/: Node.h  ccssp.h  dwa_planner.h  simple_scored_sampling_planner.h
Risk-Aware Planner/dwa_local_planner/src/: ccssp.cpp  dwa_planner.cpp  dwa_planner_ros.cpp  simple_scored_sampling_planner.cpp
Zarooni/: ZED_Velodyne.launch  ZED_Velodyne_combination.launch  stereo_mapping.launch
Zarooni/Launch/: rtabmap.launch  velodyne_ZED.launch
Zarooni/gopro/: package.xml
Zarooni/gopro/src/: opencv.py  openfromsocket.py  ros_video_ZED.py  ros_video_stream.py  ros_video_subscriber.py  sendtosocket.py  stream.py  stream_hdmi.py
Zarooni/segwayrmp/rmp_base/: CMakeLists.txt
Zarooni/segwayrmp/rmp_base/rmp/: CMakeLists.txt
Zarooni/segwayrmp/rmp_base/rmp/src/: RmpConfigurationCommand.cpp
Zarooni/segwayrmp/rmp_description/launch/: rmp440le_description.launch
Zarooni/segwayrmp/rmp_teleop/src/: RmpXboxConverter.cpp  joy_node.cpp  rmp_teleop_node.cpp
Zarooni/zed-ros-examples/examples/zed_rtabmap_example/launch/: zed_rtabmap.launch
Zarooni_Final/: README.md
Zarooni_Final/SNAIL/: LICENSE
Zarooni_Final/SNAIL/general_control/: package.xml
Zarooni_Final/SNAIL/general_control/config/: control.yaml
Zarooni_Final/SNAIL/general_description/: CMakeLists.txt  README.md  package.xml
Zarooni_Final/SNAIL/general_description/config/: general.rviz  husky_config.urdf.xacro  pioneer3at_config.urdf.xacro  segbot_config.urdf.xacro
Zarooni_Final/SNAIL/general_description/launch/: description.launch
Zarooni_Final/SNAIL/general_description/meshes/pioneer3at/: chasis.dae  left_wheel.dae
Zarooni_Final/SNAIL/general_description/meshes/segbot/: chasis.dae  right_wheel.dae
Zarooni_Final/SNAIL/general_description/meshes/sensors/: LMS1xx_small.dae
Zarooni_Final/SNAIL/general_description/urdf/: chasis.urdf.xacro  gazebo.xacro  sensor.urdf.xacro  wheel.urdf.xacro
Zarooni_Final/SNAIL/general_gazebo/: CMakeLists.txt  README.md
Zarooni_Final/SNAIL/general_gazebo/launch/: spawn_robot.launch
Zarooni_Final/SNAIL/navigation_old/: CMakeLists.txt  package.xml
Zarooni_Final/SNAIL/navigation_old/configurations/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Zarooni_Final/SNAIL/navigation_old/launch/: move_base.launch  my_robot_configuration.launch  segbot_gmapping.launch
Zarooni_Final/SNAIL/navigation_old/src/: cmd_vel.cpp  odometry_sharif.cpp
Zarooni_Final/cmd_vel_smoother/cfg/: CmdVelSmoother.cfg
Zarooni_Final/cmd_vel_smoother/launch/: cmd_vel_smoother.launch
Zarooni_Final/segwayrmp/rmp_base/: CMakeLists.txt
Zarooni_Final/segwayrmp/rmp_base/include/: Rmp440LE.h
Zarooni_Final/segwayrmp/rmp_base/launch/: rmp440le.launch
Zarooni_Final/segwayrmp/rmp_base/rmp/src/: RmpLogger.cpp
Zarooni_Final/segwayrmp/rmp_base/src/: Rmp440LE-velocity.cpp  Rmp440LE.cpp  Rmp440LE_manual.cpp  Rmp440LE_manualtest.cpp  Rmp440LE_test.cpp  Rmp440LEtest1.cpp
Zarooni_Final/segwayrmp/rmp_teleop/src/: RmpXboxConverter.cpp  listener.py  move.py  move_simulation.py  rmp_teleop_node.cpp  system_defines.py  talker_xbox.py  testing_rotation.py  utils.py  vel_smoother.py
Zarooni_Final/vehicle_navigation/: CMakeLists.txt  package.xml
Zarooni_Final/vehicle_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Zarooni_Final/vehicle_navigation/launch/: amcl_demo.launch  move_base.launch
Zarooni_Final/vehicle_navigation/map/: map.pgm
general_control/: CMakeLists.txt  README.md
general_control/config/: control.yaml
general_control/launch/: control.launch
general_description/: Doc.txt  README.md  package.xml
general_description/config/: config.urdf.xacro  general.rviz  husky_config.urdf.xacro  pioneer3at_config.urdf.xacro  segbot_config.urdf.xacro
general_description/launch/: description.launch
general_description/meshes/: chasis.dae  wheel.dae
general_description/meshes/husky/: chasis.dae  right_wheel.dae  wheel.dae
general_description/meshes/pioneer3at/: right_wheel.dae
general_description/meshes/segbot/blender/model/: segbot.blend  segbot.blend1
general_description/meshes/sensors/blender/: LMS1xx_small.blend
general_description/robots/: robot.urdf.xacro
general_description/urdf/: chasis.urdf.xacro  gazebo.xacro  inertia.urdf.xacro  material.urdf.xacro  sensor.urdf.xacro  wheel.urdf.xacro
general_gazebo/: package.xml
general_gazebo/launch/: robot_empty_world.launch  spawn_robot.launch
