<?xml version="1.0"?>
<package format="2">
  <name>general_gazebo</name>
  <version>0.0.0</version>
  <description>The general_gazebo package</description>

  <maintainer email="fayyazpocker@gmail.com">fayyazpocker</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>general_control</build_depend>
  <build_depend>general_description</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>general_control</build_export_depend>
  <build_export_depend>general_description</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>general_control</exec_depend>
  <exec_depend>general_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
